feat: add Micrometer AOP support for metrics tracking and update application configuration for Prometheus